--- a/SetInOut/.vshistory/SetInOut.csproj/2023-05-04_23_10_29_488.csproj
+++ b/SetInOut/.vshistory/SetInOut.csproj/2023-05-04_23_10_29_488.csproj
@@ -39,11 +39,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DatiCnCsDll">
-      <HintPath>..\DatiCnCsDll.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\..\..\WNC\home\xnc\bin\DatiCnCsDll.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="sdmcsdll">
-      <HintPath>..\sdmcsdll.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\..\..\WNC\home\xnc\bin\sdmcsdll.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
