--- a/SetInOut/.vshistory/SetInOut.csproj/2023-07-15_11_36_53_823.csproj
+++ b/SetInOut/.vshistory/SetInOut.csproj/2023-07-15_11_36_53_823.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Instructions.cs" />
+    <Compile Include="istruzione.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
